--- a/README.html
+++ b/README.html
@@ -368,7 +368,7 @@ summary {
 <div id="material-de-apoyo-de-la-asignatura-geomorfología-licenciatura-en-geografía-universidad-autónoma-de-santo-domingo-uasd" class="section level1">
 <h1>Material de apoyo de la asignatura “Geomorfología”, Licenciatura en Geografía, Universidad Autónoma de Santo Domingo (UASD)</h1>
 <ul>
-<li><p><a href="./">Material de apoyo (este repositorio)</a></p></li>
+<li><p><a href>Material de apoyo (este repositorio)</a></p></li>
 <li><p>Repositorios de manuscritos completados por alumnas:</p>
 <ul>
 <li><a href="https://github.com/geomorfologia-202001/unidad-0-asignacion-99-mi-manuscrito-anavalera29">Cambios en los trazados de las líneas de costa y formación del beachrock en playa Najayo San Cristóbal, República Dominicana: Playa de Carlos Pinto. Ana Hilda Valera Arias Estudiante, Universidad Autónoma de Santo Domingo (UASD)</a></li>
